[gd_scene load_steps=17 format=3 uid="uid://cxuycfk068akp"]

[ext_resource type="Script" uid="uid://dcn6xblq02r56" path="res://Script/enemy.gd" id="1_s7bn3"]
[ext_resource type="Texture2D" uid="uid://sk4wrb3bsx2h" path="res://Image/Enemy/dang_1.png" id="1_tt7e2"]
[ext_resource type="AudioStream" uid="uid://dia7xk0nsfjnm" path="res://hit1.mp3" id="3_2hac7"]
[ext_resource type="PackedScene" uid="uid://cwk4psi1hrnhy" path="res://hit_particles.tscn" id="3_73x2u"]
[ext_resource type="AudioStream" uid="uid://bljo1ubrhgy7y" path="res://hit2.mp3" id="4_jdgko"]
[ext_resource type="AudioStream" uid="uid://rvvspl3fgisu" path="res://hit4.mp3" id="5_j4qr3"]
[ext_resource type="AudioStream" uid="uid://660isrtesig7" path="res://hit3.mp3" id="6_73x2u"]
[ext_resource type="AudioStream" uid="uid://dcxdath7wppg2" path="res://SFX/hit5.mp3" id="7_2iwxp"]
[ext_resource type="AudioStream" uid="uid://d2kva1wo4ne3g" path="res://SFX/hit6.mp3" id="8_4v6dm"]
[ext_resource type="AudioStream" uid="uid://dvb2mr7bq7p7c" path="res://SFX/hit7.mp3" id="9_2r3mv"]
[ext_resource type="AudioStream" uid="uid://beui0h5kyadjs" path="res://SFX/hit8.mp3" id="10_jccr3"]
[ext_resource type="AudioStream" uid="uid://dlpcy8w6h67pe" path="res://BGM/nigero.mp3" id="11_j4qr3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7bn3"]
size = Vector2(48, 38)

[sub_resource type="Animation" id="Animation_s7bn3"]
resource_name = "Enemy1_Run"
length = 0.433337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_tt7e2")]
}

[sub_resource type="Animation" id="Animation_tt7e2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_tt7e2")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hac7"]
_data = {
&"Enemy1_Run": SubResource("Animation_s7bn3"),
&"RESET": SubResource("Animation_tt7e2")
}

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_s7bn3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_s7bn3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tt7e2")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2hac7")
}
autoplay = "Enemy1_Run"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_s7bn3")

[node name="HitParticles" parent="." instance=ExtResource("3_73x2u")]
unique_name_in_owner = true

[node name="HitSound0" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2hac7")

[node name="HitSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jdgko")

[node name="HitSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j4qr3")

[node name="HitSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_73x2u")

[node name="HitSound4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2iwxp")

[node name="HitSound5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4v6dm")

[node name="HitSound6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2r3mv")

[node name="HitSound7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_jccr3")

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_j4qr3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
